# esp32-wroom-rp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: build_and_test.yml  rust-clippy.yml
cross/: Cargo.toml
cross/dns/: Cargo.toml
cross/dns/src/: main.rs
cross/get_fw_version/: Cargo.toml
cross/get_fw_version/src/: main.rs
cross/get_fw_version/src/secrets/: secrets.rs
cross/join/: Cargo.toml
cross/join/src/: main.rs
cross/receive_data_tcp/: Cargo.toml
cross/receive_data_tcp/src/: main.rs
cross/secrets/: secrets.rs
cross/send_data_tcp/: Cargo.toml
cross/send_data_tcp/src/: main.rs
esp32-wroom-rp/: Cargo.toml  README.md
esp32-wroom-rp/src/: gpio.rs  lib.rs  network.rs  protocol.rs  spi.rs  tcp.rs  tcp_client.rs  wifi.rs
esp32-wroom-rp/src/protocol/: operation.rs
examples/: get_firmware_version.rs  get_fw_version.rs  join.rs  secrets.rs
host-tests/: Cargo.toml
host-tests/tests/: spi.rs  tcp_client.rs
host-tests/tests/support/: mod.rs
scripts/: create-git-hooks  hooks-wrapper
scripts/git/: pre-commit
src/: gpio.rs  io_interface.rs  lib.rs  pins.rs  protocol.rs  spi.rs  wifi.rs
src/protocol/: stream.rs
