[package]
authors = [
    "Jim Hodapp",
    "Caleb Bourg",
    "Glyn Matthews"
]
edition = "2021"
readme = "README.md"
name = "esp32-wroom-rp"
version = "0.1.0"
resolver = "2"
description = "Rust-based Espressif ESP32-WROOM WiFi driver crate for RP2040 series microcontroller boards."

[lib]
name = "esp32_wroom_rp"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "=1.0.0-alpha.7" }
eh-02 = { version = "0.2", package="embedded-hal"  }
embedded-time = "0.12"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-rtt"] }

rp2040-hal = { version = "0.5", features=["rt", "eh1_0_alpha"] }
rp2040-boot2 = { version = "0.2" }
cortex-m-semihosting = "0.5"

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[[example]]
name = "get_fw_version"
