[package]
authors = [
    "Jim Hodapp",
    "Caleb Bourg",
    "Glyn Matthews"
]
edition = "2021"
readme = "README.md"
name = "esp32-wroom-rp"
version = "0.1.0"
description = "Rust-based Espressif ESP32-WROOM WiFi driver crate for RP2040 series microcontroller boards."

[lib]
name = "esp32_wroom_rp"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "=1.0.0-alpha.7" }
eh-02 = { version = "0.2", package="embedded-hal"  }
embedded-time = "0.12"

defmt = "0.3"
defmt-rtt = "0.3"
heapless = "0.7.16"
panic-probe = { version = "0.3", features = ["print-rtt"] }

cortex-m-semihosting = "0.5"

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
