[package]
authors = [
    "Jim Hodapp",
    "Caleb Bourg",
    "Glyn Matthews",
    "Dilyn Corner"
]
edition = "2021"
readme = "README.md"
name = "esp32-wroom-rp"
version = "0.3.0"
description = "Rust-based Espressif ESP32-WROOM WiFi driver crate for RP2040 series microcontroller boards."

[lib]
name = "esp32_wroom_rp"
# TODO: figure out successful doctest dependencies so the inline example code can pass
# and then enable doctest by setting this to true
doctest = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
embedded-hal = { version = "0.2", features=["unproven"] }
rp2040-hal = { version = "0.6", features=["rt", "eh1_0_alpha"] }


defmt = "0.3"
defmt-rtt = "0.3"
heapless = "0.7.16"
panic-probe = { version = "0.3", features = ["print-rtt"] }

[dev-dependencies]
embedded-hal-mock = "0.8.0"

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
