[package]
authors = [
    "Jim Hodapp",
    "Caleb Bourg",
    "Glyn Matthews",
    "Dilyn Corner",
    "Rust Never Sleeps <rns@jimhodappcoaching.com>"
]
edition = "2021"
readme = "README.md"
name = "esp32-wroom-rp"
license = "BSD-2-Clause-Patent"
version = "0.3.1"
description = "Rust-based Espressif ESP32-WROOM WiFi driver crate for RP2040 series microcontroller boards."
categories = ["embedded", "no-std", "hardware-support", "embedded-hal", "RP2040"]
repository = "https://github.com/Jim-Hodapp-Coaching/esp32-wroom-rp"

[lib]
name = "esp32_wroom_rp"
# TODO: figure out successful doctest dependencies so the inline example code can pass
# and then enable doctest by setting this to true
doctest = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
embedded-hal = { version = "0.2", features=["unproven"] }

defmt = "0.3"
defmt-rtt = "0.3"
heapless = "0.7.16"
panic-probe = { version = "0.3", features = ["print-rtt"] }

[dev-dependencies]
embedded-hal-mock = "0.9.0"

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
