[package]
authors = [
    "Jim Hodapp",
    "Caleb Bourg",
    "Glyn Matthews",
    "Dilyn Corner"
]
edition = "2021"
name = "host-tests"
version = "0.3.1"
publish = false
description = "Host-side tests for the Rust-based Espressif ESP32-WROOM WiFi driver crate for RP2040 series microcontroller boards."

[dev-dependencies]
embedded-hal-mock = "0.9.0"
esp32-wroom-rp = { path = "../esp32-wroom-rp" }
