[package]
authors = [
    "Jim Hodapp",
    "Caleb Bourg",
    "Glyn Matthews",
    "Dilyn Corner"
]
edition = "2021"
name = "send_data_tcp"
version = "0.3.0"
description = "Example RP2040 target application that demonstrates how to send data to a remote server over TCP."

# makes `cargo check --all-targets` work
[[bin]]
name = "send_data_tcp"
bench = false
doctest = false
test = false

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.3.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2", features=["unproven"] }
esp32-wroom-rp = { path = "../../esp32-wroom-rp" }
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
heapless = "0.7.16"

rp2040-hal = { version = "0.6", features=["rt", "eh1_0_alpha"] }
rp2040-boot2 = { version = "0.2" }
fugit = "0.3"

[features]
default = ['defmt-default']
# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
